django-andsome (1.3.2-1) unstable; urgency=low

  * Fix URL syntax for Django 1.5

 -- Brian May <bam@debian.org>  Tue, 28 May 2013 15:38:54 +1000

django-andsome (1.3.1-1) stable; urgency=low

  * Use class colSM so sub-titles are consistent.

 -- Brian May <bam@debian.org>  Mon, 19 Nov 2012 14:06:00 +1100

django-andsome (1.3-1) stable; urgency=low

  * Take over the package from previous maintainer.
  * Remove reference to obsolete arcs website.
  * Update image references to use staticfile images from Django package.

 -- Brian May <bam@debian.org>  Wed, 07 Nov 2012 13:48:28 +1100

django-andsome (1.2-1) stable; urgency=low

  * Support new Django static urls

 -- Sam Morrison <sam@vpac.org>  Thu, 09 Aug 2012 11:29:07 +1000

django-andsome (1.1.17-1) stable; urgency=low

  * Handle graphs with no data

 -- Sam Morrison <sam@vpac.org>  Mon, 19 Sep 2011 15:22:06 +1000

django-andsome (1.1.16-1) stable; urgency=low

  * Refactored google bar and line charts
  * New divide templatetag

 -- Sam Morrison <sam@vpac.org>  Wed, 17 Aug 2011 16:16:08 +1000

django-andsome (1.1.15-1) stable; urgency=high

  * Fixed bug in filters if not filters defined

 -- Sam Morrison <sam@vpac.org>  Wed, 03 Aug 2011 11:47:52 +1000

django-andsome (1.1.14-1) stable; urgency=low

  * Use commas when displaying count of results
  * Handle None values in filesizeformat filter
  * Improvments to filters WRT querystrings

 -- Sam Morrison <sam@vpac.org>  Mon, 01 Aug 2011 13:09:01 +1000

django-andsome (1.1.13-1) stable; urgency=low

  * Handle ValuesQuerySets in filter bar
  * Remove debugging print statements

 -- Sam Morrison <sam@vpac.org>  Fri, 22 Jul 2011 10:57:50 +1000

django-andsome (1.1.12-1) stable; urgency=low

  * Fixed some broken logic in new paginator

 -- Sam Morrison <sam@vpac.org>  Fri, 24 Jun 2011 11:13:15 +1000

django-andsome (1.1.11-1) stable; urgency=low

  * Better pagination

 -- Sam Morrison <sam@vpac.org>  Tue, 21 Jun 2011 10:19:26 +1000
