@@ -1,12 +1,7 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
 
-DEB_PYTHON_SYSTEM := pysupport
+DEB_PYTHON2_MODULE_PACKAGES := django-andsome
 
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/python-distutils.mk
-
-clean::
-	rm -rf build build-stamp configure-stamp build/ MANIFEST dist/
-	dh_clean
-
